# skill-manager

./: .gitignore  IMPLEMENTATION_OVERVIEW.md  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: requirements.md  ui-redesign.md
releases/: Skill Manager_1.0.0_x64_en-US.msi
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: annotations.rs  audit.rs  cli.rs  commands.rs  config.rs  installer.rs  lib.rs  marketplace.rs  models.rs  parser.rs  project.rs  scanner.rs
src/components/: ArchivePanel.tsx  ConsistencyPanel.tsx  InstallModal.tsx  Logo.tsx  MarketplacePanel.tsx  ProjectPanel.tsx  ScenariosPanel.tsx  Sidebar.tsx  SkillCard.tsx  SkillDrawer.tsx  icons.tsx
src/lib/: ui.ts
