[package]
name = "skill-manager"
version = "1.0.0"
description = "Local AI editor skill manager"
authors = ["李"]
edition = "2021"
default-run = "skill-manager"

[lib]
name = "skill_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "skill-cli"
path = "src/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
anyhow = "1"
